@@ -4,10 +4,14 @@ package com.ouoj.ouojcodesandbox;
 import cn.hutool.core.io.FileUtil;
 import cn.hutool.core.io.resource.ResourceUtil;
 import cn.hutool.core.util.StrUtil;
+import cn.hutool.dfa.FoundWord;
+import cn.hutool.dfa.WordTree;
 import com.ouoj.ouojcodesandbox.model.ExecuteCodeRequest;
 import com.ouoj.ouojcodesandbox.model.ExecuteCodeResponse;
 import com.ouoj.ouojcodesandbox.model.ExecuteMessage;
 import com.ouoj.ouojcodesandbox.model.JudgeInfo;
+import com.ouoj.ouojcodesandbox.security.DefaultSecurityManager;
+import com.ouoj.ouojcodesandbox.security.DenySecurityManager;
 import com.ouoj.ouojcodesandbox.utils.ProcessUtils;
 
 
@@ -20,9 +24,32 @@ import java.util.UUID;
 
 public class JavaNativeCodeSandbox implements CodeSandbox {
 
+    //临时存放代码文件夹
     private static final String GLOBAL_CODE_DIR_NAME = "tmpCode";
 
+    //读取文件名
     private static final String GLOBAL_JAVA_CLASS_NAME = "Main.java";
+
+    //代码最长运行时间限制
+    private static final long TIME_OUT = 10000L;
+
+    //限制安全路径
+    private static final String SECURITY_MANAGER_CLASS_PATH = "D:\\Java_study\\code\\OJ_OnlineTestJudgment\\ouoj-code-sandbox\\src\\main\\java\\com\\ouoj\\ouojcodesandbox\\security";
+    private static final String SECURITY_MANAGER_CLASS_CLASS_NAME = "MySecurityManager.class";
+
+    //危险命令黑名单
+    private static final List<String> blackList = Arrays.asList("Files", "exec");
+
+    private static final WordTree WORD_TREE;
+
+    static {
+        //初始化字典树
+        // 校验代码中是否具有黑名单危险命令
+        WORD_TREE = new WordTree();
+        WORD_TREE.addWords(blackList);
+
+    }
+
 
     //测试类
     public static void main(String[] args) {
@@ -40,10 +67,19 @@ public class JavaNativeCodeSandbox implements CodeSandbox {
 
     @Override
     public ExecuteCodeResponse executeCode(ExecuteCodeRequest executeCodeRequest) {
+
+
         List<String> inputList = executeCodeRequest.getInputList();
         String code = executeCodeRequest.getCode();
         String language = executeCodeRequest.getLanguage();
 
+        FoundWord foundWord = WORD_TREE.matchWord(code);
+        if(foundWord != null){
+            System.out.println("包含禁止词：" + foundWord.getFoundWord());
+            return null;
+        }
+
+        //1.把用户代码保存为文件
         String userDir = System.getProperty("user.dir");
         String globalCodePathName = userDir + File.separator + GLOBAL_CODE_DIR_NAME;
         //判断全局代码是否存在，没有则新建
@@ -70,11 +106,23 @@ public class JavaNativeCodeSandbox implements CodeSandbox {
         // 3.执行代码，得到输出结果
         List<ExecuteMessage> executeMessageList = new ArrayList<>();
         for (String inputArgs : inputList) {
-
-            String runCmd = String.format("java -Dfile.encoding=UTF-8 -cp %s Main %s", userCodeParentPath, inputArgs);
+            //System.setSecurityManager(new DenySecurityManager());
+            //String runCmd = String.format("java -Xmx256m -Dfile.encoding=UTF-8 -cp %s Main %s", userCodeParentPath, inputArgs);
+            //启动java时启动安全管理器-Djava.security.manager=MySecurityManager
+            String runCmd = String.format("java -Xmx256m -Dfile.encoding=UTF-8 -cp %s;%s -Djava.security.manager=%s Main %s", userCodeParentPath, SECURITY_MANAGER_CLASS_PATH,SECURITY_MANAGER_CLASS_CLASS_NAME,inputArgs);
 
             try {
                 Process runProcess = Runtime.getRuntime().exec(runCmd);
+                //超时控制
+                new Thread(() -> {
+                    try {
+                        Thread.sleep(TIME_OUT);
+                        System.out.println("超时了，中断");
+                        runProcess.destroy();
+                    } catch (InterruptedException e) {
+                        throw new RuntimeException(e);
+                    }
+                }).start();
                 ExecuteMessage executeMessage = ProcessUtils.runProcessAndGetMessage(runProcess, "运行");
                 //ExecuteMessage executeMessage = ProcessUtils.runInteractProcessAndGetMessage(runProcess, inputArgs);
                 System.out.println(executeMessage);
@@ -114,9 +162,9 @@ public class JavaNativeCodeSandbox implements CodeSandbox {
         //judgeInfo.setMemory();
         executeCodeResponse.setJudgeInfo(judgeInfo);
         //5.文件清理 防止服务器空间不足
-        if(userCodeFile.getParentFile() != null){
+        if (userCodeFile.getParentFile() != null) {
             boolean del = FileUtil.del(userCodeParentPath);
-            System.out.println("删除" + (del ? "成功" :"失败"));
+            System.out.println("删除" + (del ? "成功" : "失败"));
         }
         return executeCodeResponse;
 
